--- a/planner/CMakeLists.txt
+++ b/planner/CMakeLists.txt
@@ -160,6 +160,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   src/drone_teleop.py
+  src/racer_if.py
   scripts/planner/base_interface.py
   src/key_teleop.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
