Attention viewpoints + test on hw
- all viewpoint candidates plotting rn
- succesful fuel hw test

--- a/planner/CMakeLists.txt
+++ b/planner/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.0.2)
 project(planner)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
+set(CMAKE_BUILD_TYPE "Debug")
+# set(CMAKE_CXX_FLAGS "-std=c++11")
+# set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
