--- a/sw/perception/attention_map/CMakeLists.txt
+++ b/sw/perception/attention_map/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(simulator)
+project(attention_map)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,15 +8,15 @@ project(simulator)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  gazebo_ros
-  geometry_msgs
+  common_msgs
+  plan_env
   roscpp
   rospy
   sensor_msgs
+  traj_utils
+  visualization_msgs
 )
-
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(PCL 1.7 REQUIRED)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -72,7 +72,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs#   sensor_msgs
+#   common_msgs#   sensor_msgs#   visualization_msgs
 # )
 
 ################################################
@@ -106,8 +106,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES simulator
-#  CATKIN_DEPENDS gazebo_ros geometry_msgs roscpp rospy sensor_msgs
+#  LIBRARIES attention_map
+ CATKIN_DEPENDS common_msgs plan_env roscpp sensor_msgs traj_utils visualization_msgs
 #  DEPENDS system_lib
 )
 
@@ -120,11 +120,12 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/simulator.cpp
+#   src/${PROJECT_NAME}/attention_map.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -135,7 +136,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(fake_localization_node src/fake_localization.cpp)
+add_executable(attention_processor_node src/attention_processor.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -148,18 +149,23 @@ add_executable(fake_localization_node src/fake_localization.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(fake_localization_node
+target_link_libraries(attention_processor_node
   ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
 )
 
-############/gets should use catkin DESTINATION variables
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-   src/offboard.py
-   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  src/attention_map.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 ## Mark executables for installation
@@ -195,7 +201,7 @@ catkin_install_python(PROGRAMS
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_simulator.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_attention_map.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
