--- a/sw/minimal/CMakeLists.txt
+++ b/sw/minimal/CMakeLists.txt
@@ -8,15 +8,15 @@ project(minimal)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  sensor_msgs
-  cv_bridge
-  roscpp
-  std_msgs
-  image_transport
+  # sensor_msgs
+  # cv_bridge
+  # roscpp
+  # std_msgs
+  # image_transport
 )
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Eigen3 REQUIRED)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
