--- a/sw/bringup/config/fuel_px4_interface.yaml
+++ b/sw/bringup/config/fuel_px4_interface.yaml
@@ -9,10 +9,12 @@ dist_thres: 0.3
 
 # Desired positions in 3D space
 pos:
-  takeoff: [-2, -1, 1]
+  takeoff_z: 1
   start:   [-2, -1, 1]
   goal:    [-2, -1, 1]
   land:    [-2, -1, 1]
+
+use_takeoff_as_start: true
 
 # Usage of external planner and/or controller during mission execution phase
 use_external_controller: true
