Revert PX4 to old laptop version (#18)
- custom changes added on fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,7 +19,8 @@
 
 [submodule "sw/simulation/PX4-Autopilot"]
 	path = sw/simulation/PX4-Autopilot
-	url = https://github.com/cor-drone-dev/PX4-Autopilot
+	url = https://github.com/nikhil-sethi/PX4-Autopilot
+	branch = devel
 
 [submodule "sw/third_party/nlopt"]
 	path = sw/third_party/nlopt
