--- a/sw/bringup/config/fuel_algo.yaml
+++ b/sw/bringup/config/fuel_algo.yaml
@@ -1,5 +1,5 @@
-define: &max_vel 0.5
-define: &max_acc 0.5
+define: &max_vel 0.4
+define: &max_acc 0.3
 
 sdf_map:
   resolution: 0.1
@@ -15,7 +15,7 @@ sdf_map:
   p_miss: 0.4
   p_min: 0.12
   p_max: 0.99
-  p_occ: 0.7
+  p_occ: 0.7 # keep this lower if there is a lot of noise. But higher values also might lead to more false positives
   min_ray_length: 0.5
   max_ray_length: 3
   virtual_ceil_height: -10
@@ -36,8 +36,8 @@ map_ros:         # Gazebo        # Intel realsense 4255
   depth_filter_maxdist: 3
   depth_filter_mindist: 0.2
   depth_filter_margin: 2
-  k_depth_scaling_factor: 1000.0
-  skip_pixel: 8
+  k_depth_scaling_factor: 1000.0  # the realsense gives values in mm, so keep it to 1000 for real world testing
+  skip_pixel: 8  # how many pixels to to skip consecutively while going over the depth image to create the cloud
   esdf_slice_height: 0.1
   visualization_truncate_height: 10.09
   visualization_truncate_low: -2.0
@@ -47,15 +47,26 @@ map_ros:         # Gazebo        # Intel realsense 4255
   frame_id: world
 
 fsm:
-  thresh_replan1: 0.5
-  thresh_replan2: 0.5
-  thresh_replan3: 1.5
+  # Replan if the time left to complete the current trajectory is below this
+  # lower values mean you're confident about your paths and plan less frequently but might be jerky if the next plan is very differnt from the current
+  # higher values help replan before and be stable to sudden changes, but also means you change the plan more frequently
+  thresh_replan1: 0.5  # [s]
+  
+  # Replan if you have executed at least this amount of trajectory AND the next frontier is covered.
+  # This helps the drone to execute at least something before replanning because we need to keep it moving
+  thresh_replan2: 0.5 # [s]
+
+  # In any case, always replan after this much real time has elapsed. Helps the drone get out stuck places and keeps it going
+  # This can be higher if your drone moves slower because you dont want to keep replanning always
+  thresh_replan3: 2.5 # [s]
   replan_time: 0.200
 
 exploration:
   refine_local: true
   refined_num: 7
-  refined_radius: 5.0
+
+  # the radius in which you refine viewpoints using Dijkstra
+  refined_radius: 3.0
   max_decay: 0.8
   top_view_num: 15
   vm: *max_vel
@@ -63,33 +74,56 @@ exploration:
   
   # Cost to change yaw angle 
   # this should ideally be matched closely with the controller's maximum yaw rate, but might need to be more conservative because of noise and delays
-  yd:  0.6     # "$(eval 45 * 3.1415926 / 180.0)"   DONT LOWER THIS BELOW 0.6 in hardware flights. DRONE GIVES UP
-  ydd: 1.5707963     # "$(eval 90 * 3.1415926 / 180.0)"  not used
+  # with the real drone, it seems we need to be much more conservative than the control limit
+  # this is also linked to the free space the trajectory has for moving around (dist0 param in optimization)
+  yd:  0.45     # "$(eval 25 * 3.1415926 / 180.0)"  
+
+  # NOT USED
+  ydd: 1.5707963     # "$(eval 90 * 3.1415926 / 180.0)"
   
   # Cost to change velocity vector direction
   # higher values resist changes and act more sluggish but result in better, stable movements
   # lower values decrease flight times but with poor mapping
-  w_dir: 3 
-  tsp_dir: "$(find lkh_tsp_solver)/resource" # YAML limitation: needs to be remapped from outside if you want relative paths. 
+  w_dir: 5
+  tsp_dir: "/root/thesis_ws/src/thesis/sw/planning/FUEL/fuel_planner/utils/lkh_tsp_solver/resource/" # YAML limitation: needs to be remapped from outside if you want relative paths. 
   relax_time: 1.0
 
 frontier:
   cluster_min: 100
   cluster_size_xy: 1.5
   cluster_size_z: 10.0
-  min_candidate_dist: 0.5  # minimum distance a viewpoint needs to be from the centroid of a frontier to be considered
+  
+  # minimum distance a viewpoint needs to be from the centroid of a frontier to be considered
+  # If higher than rmin, it will discard some bad viewpoints
+  min_candidate_dist: 0.5  
+  
+  # how far must a viewpoint candidate be from unknown space to be considered. Like a safety margin.
+  # high values can sometimes mean that there is no vpt available and 'search fails'
   min_candidate_clearance: 0.21
-  candidate_dphi: 0.261799383  # "$(eval 15 * 3.1415926 / 180.0)"
+
+  # Angle delta for viewpoint sampling
+  # if you have very small narrow spaces, keep this lower, but doesnt affect too much tbh
+  candidate_dphi: 0.261  # "$(eval 15 * 3.1415926 / 180.0)"
+  
+  # how many concentric circles of viewpoints to sample between rmin and rmax 
   candidate_rnum: 3
-  candidate_rmin: 0.75
-  candidate_rmax: 1.75
+  # lower radius of viewpoint sampling around a frontier
+  candidate_rmin: 0.75 # [m]
+  # max radius for viewpoint sampling around a frontier
+  candidate_rmax: 1.75 # [m]
   down_sample: 3
+
+  # how many valid frontier voxels does a viewpoint need to see to be considered
+  # lower values mean we have a lot of viewpoints even in small places
+  # higher values means we are conservative about what a viewpoint sees
+  # also depends a lot on your map resolution
   min_visib_num: 10
   
   # % change that must happen for the frontier to call for recompute
   # Low values mean that we moved along very fast across the space, considering even a small changed to be enough to reevaluate
   # high values mean we are more strict. We make a lot of observations before moving. This is sluggish but makes the environment scene more stable
-  min_view_finish_fraction: 0.5    
+  # it should be tuned such that your observe smooth motions, without stops or fast acclerations
+  min_view_finish_fraction: 0.2   
 
 perception_utils:
   top_angle: 0.56125
@@ -123,7 +157,9 @@ manager:
   use_optimization: true
   use_active_perception: true
   min_time: true
-  max_yawdot: 0.6  # 60 * 3,1415926 / 180,0
+
+  # helps discard yaw angle plans that have large changes
+  max_yawdot: 0.45  # 60 * 3,1415926 / 180,0
   relax_time1: 0.3
   relax_time2: 1.5
 
@@ -151,15 +187,24 @@ astar:
 
 optimization:
   ld_smooth: 20.0
-  ld_dist: 10.0
+
+  # cost to keep dist0 distance from the ESDF
+  ld_dist: 20.0
   ld_feasi: 2.0
   ld_start: 100.0
-  ld_end: 0.5
+
+  # cost to arrive at the last pose
+  # keep it higher if you want it to be strict. But it can also make the trajectory infeasible sometimes
+  ld_end: 20.5
   ld_guide: 1.5
   ld_waypt: 0.3
   ld_view: 0.0
   ld_time: 1.0
-  dist0: 0.7
+
+  # The minimum distance the trajectory should maintain from obstacles
+  # in practice this should be higher than what you expect because of noise etc.
+  # But this distance is also valid from the ground (in z axis), so if the drone wants to see something close to the ground, it will find it hard to do and keep oscillating
+  dist0: 0.4 # [m]
   max_vel: *max_vel
   max_acc: *max_acc
   algorithm1: 15
