--- a/sw/control/control_interface/package.xml
+++ b/sw/control/control_interface/package.xml
@@ -61,6 +61,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+    <depend>drone_toolbox_ext_control_template</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
