--- a/sw/bringup/config/fuel_algo.yaml
+++ b/sw/bringup/config/fuel_algo.yaml
@@ -12,7 +12,7 @@ sdf_map:
   ground_height: -0.2
   default_dist: 0.0
   p_hit: 0.68
-  p_miss: 0.4
+  p_miss: 0.5  # 0.5 works best in sim. Higher values we are more liberal, so there are more false positives as well
   p_min: 0.12
   p_max: 0.99
   p_occ: 0.7 # keep this lower if there is a lot of noise. But higher values also might lead to more false positives
@@ -76,7 +76,7 @@ exploration:
   # this should ideally be matched closely with the controller's maximum yaw rate, but might need to be more conservative because of noise and delays
   # with the real drone, it seems we need to be much more conservative than the control limit
   # this is also linked to the free space the trajectory has for moving around (dist0 param in optimization)
-  yd:  0.5     # "$(eval 25 * 3.1415926 / 180.0)"  
+  yd:  0.7     # "$(eval 25 * 3.1415926 / 180.0)"  
 
   # NOT USED
   ydd: 1.5707963     # "$(eval 90 * 3.1415926 / 180.0)"
@@ -193,7 +193,7 @@ optimization:
   ld_smooth: 20.0
 
   # cost to keep dist0 distance from the ESDF
-  ld_dist: 20.0
+  ld_dist: 10.0
   ld_feasi: 10.0 # how much to respect max vel and max acc
   ld_start: 100.0
 
@@ -208,7 +208,7 @@ optimization:
   # The minimum distance the trajectory should maintain from obstacles
   # in practice this should be higher than what you expect because of noise etc.
   # But this distance is also valid from the ground (in z axis), so if the drone wants to see something close to the ground, it will find it hard to do and keep oscillating
-  dist0: 0.5 # [m]
+  dist0: 0.7 # [m]
   max_vel: *max_vel
   max_acc: *max_acc
   algorithm1: 15
