--- a/sw/perception/semantics/CMakeLists.txt
+++ b/sw/perception/semantics/CMakeLists.txt
@@ -159,7 +159,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  src/detection.py
+  src/object_detection.py
+  src/aruco_segment.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
