--- a/sw/bringup/config/fuel_algo.yaml
+++ b/sw/bringup/config/fuel_algo.yaml
@@ -3,8 +3,8 @@ define: &max_acc 0.25
 
 sdf_map:
   resolution: 0.1
-  map_size_x: 5
-  map_size_y: 5
+  map_size_x: 11 # 11
+  map_size_y: 11 # 11
   map_size_z: 1.7
   obstacles_inflation: 0.199
   local_bound_inflate: 0.5
@@ -12,7 +12,7 @@ sdf_map:
   ground_height: -0.2
   default_dist: 0.0
   p_hit: 0.68
-  p_miss: 0.47  # 0.5 works best in sim. Higher values we are more liberal, so there are more false positives as well
+  p_miss: 0.47  # 0.47 works best in sim. Higher values we are more liberal, so there are more false positives as well
   p_min: 0.12
   p_max: 0.99
   p_occ: 0.7 # keep this lower if there is a lot of noise. But higher values also might lead to more false positives
@@ -21,11 +21,11 @@ sdf_map:
   virtual_ceil_height: -10
   optimistic: false
   signed_dist: false
-  box_min_x: -2.5
-  box_min_y: -2.5
-  box_min_z:  -0.2
-  box_max_x: 2.5
-  box_max_y: 2.5
+  box_min_x: -5.5 #-5.5
+  box_min_y: -5.5 #-5.5
+  box_max_x:  5.5 #5.5
+  box_max_y:  5.5 #5.5
+  box_min_z:  -0.0
   box_max_z: 1.5
 
 map_ros:         # Gazebo        # Intel realsense 4255  
