TSP solving server + refactor
- motsp working

--- a/sw/common_msgs/CMakeLists.txt
+++ b/sw/common_msgs/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   message_runtime
   std_msgs
+  visualization_msgs
+  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -52,6 +54,7 @@ add_message_files(
   float64List.msg
   target.msg
   uint8List.msg
+  Viewpoints.msg
   # Message2.msg
 )
 
@@ -72,7 +75,9 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
+  visualization_msgs
   std_msgs
+  geometry_msgs
 )
 
 ################################################
