Working gmm diffusion with sampling

--- a/sw/bringup/config/params.yaml
+++ b/sw/bringup/config/params.yaml
@@ -1,4 +1,4 @@
-use_active_perception: true 
+use_active_perception: false 
 use_semantic_search: true # LNS with or without priorities
 use_lkh: false # LKH without priorities
 
