--- a/sw/bringup/models/amrlab/model.config
+++ b/sw/bringup/models/amrlab/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>lab_base</name>
+    <name>amrlab_model</name>
     <version>1.0</version>
     <sdf version="1.7">model.sdf</sdf>
     <author>
