--- a/sw/bringup/config/earthquake.yaml
+++ b/sw/bringup/config/earthquake.yaml
@@ -1,10 +1,4 @@
 
-objects: [
-  "human",
-  ""
-]
-
-
 # ========= FUEL =========
 define: &max_vel 0.4
 define: &max_acc 0.25
@@ -30,7 +24,7 @@ exploration:
   yd:  0.7     # "$(eval 25 * 3.1415926 / 180.0)"  
 
 frontier:
-  cluster_min: 0 # used to discard frontiers smaller than this value
+  cluster_min: 0 # used to discard frontiers smaller than this value. FUEL was at 100
   cluster_size_xy: 1.5 # used by PCA to split large frontiers 
   cluster_size_z: 10
   
