--- a/sw/planning/target_search/CMakeLists.txt
+++ b/sw/planning/target_search/CMakeLists.txt
@@ -109,7 +109,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES target_search
 #  CATKIN_DEPENDS active_perception
 #  DEPENDS system_lib
@@ -122,7 +122,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-    include
+    # include
     ${catkin_INCLUDE_DIRS}
     ${EIGEN3_INCLUDE_DIRS} 
 )
@@ -141,7 +141,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/target_search_node.cpp)
-add_executable(test_vpt test/test_vpt.cpp)
+# add_executable(test_vpt test/test_vpt.cpp)
 # add_executable(mo_tsp_node src/mo_tsp_node.py)
 
 ## Rename C++ executable without prefix
@@ -159,9 +159,9 @@ add_executable(test_vpt test/test_vpt.cpp)
 #   ${catkin_LIBRARIES}
 # )
 
-target_link_libraries(test_vpt
-  ${catkin_LIBRARIES}
-)
+# target_link_libraries(test_vpt
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -192,11 +192,11 @@ catkin_install_python(PROGRAMS
 # )
 
 ## Mark cpp header files for installation
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+# install(DIRECTORY include/${PROJECT_NAME}/
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 #   FILES_MATCHING PATTERN "*.h"
 #   PATTERN ".svn" EXCLUDE
-)
+# )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
