--- a/sw/bringup/config/earthquake.yaml
+++ b/sw/bringup/config/earthquake.yaml
@@ -1,7 +1,7 @@
 
 # ========= FUEL =========
-define: &max_vel 0.4
-define: &max_acc 0.25
+# define: &max_vel 0.4
+# define: &max_acc 0.25
 
 sdf_map:
   resolution: 0.1
@@ -52,7 +52,7 @@ frontier:
   # lower values mean we have a lot of viewpoints even in small places
   # higher values means we are conservative about what a viewpoint sees
   # also depends a lot on your map resolution
-  min_visib_num: 20
+  min_visib_num: 10
   
   # % change that must happen for the frontier to call for recompute
   # Low values mean that we moved along very fast across the space, considering even a small changed to be enough to reevaluate
