--- a/sw/bringup/config/earthquake_vsep.yaml
+++ b/sw/bringup/config/earthquake_vsep.yaml
@@ -1,38 +1,39 @@
-# ========== FUEL ========
 
-define: &max_vel 0.4
-define: &max_acc 0.25
+# ========= FUEL =========
+# define: &max_vel 0.4
+# define: &max_acc 0.25
 
 sdf_map:
   resolution: 0.1
-  map_size_x: 30 # 11
-  map_size_y: 30 # 11
-  map_size_z: 3
-  ground_height: -0.2
-  box_min_x: -1 #-5.5
-  box_min_y: -15 #-5.5
-  box_max_x:  29 #5.5
-  box_max_y:  15 #5.5
+  map_size_x: 12 # 11
+  map_size_y: 12 # 11
+  map_size_z: 1.5
+  box_min_x: -6 #-5.5
+  box_min_y: -6 #-5.5
+  box_max_x:  6 #5.5
+  box_max_y:  6 #5.5
   box_min_z:  -0.0
-  box_max_z: 2
-
-# uncomment for VSEP. it uses 640*480
-# map_ros:         # Gazebo        # Intel realsense 4255  
-#   cx: 320.5  # 424.50000     # 422.86578  
-#   cy: 240.5  # 240.50000     # 242.46154
-#   fx: 467.742  # 454.68577     # 427.75729
-#   fy: 467.742  # 454.68577     # 427.75729
+  box_max_z: 1.5
 
 
-fsm:
-  # Replan if you have executed at least this amount of trajectory AND the next frontier is covered.
-  # This helps the drone to execute at least something before replanning because we need to keep it moving
-  thresh_replan2: 0.2 # [s]
+map_ros:         # Gazebo        # Intel realsense 4255  
+  cx: 320.5  # 424.50000     # 422.86578  
+  cy: 240.5  # 240.50000     # 242.46154
+  fx: 467.742  # 454.68577     # 427.75729
+  fy: 467.742  # 454.68577     # 427.75729
+
+
+exploration:
+  # Cost to change yaw angle 
+  # this should ideally be matched closely with the controller's maximum yaw rate, but might need to be more conservative because of noise and delays
+  # with the real drone, it seems we need to be much more conservative than the control limit
+  # this is also linked to the free space the trajectory has for moving around (dist0 param in optimization)
+  yd:  0.7     # "$(eval 25 * 3.1415926 / 180.0)"  
 
 frontier:
-  cluster_min: 0 # used to discard frontiers smaller than this value
+  cluster_min: 100 # used to discard frontiers smaller than this value. FUEL was at 100
   cluster_size_xy: 1.5 # used by PCA to split large frontiers 
-  cluster_size_z: 1.5
+  cluster_size_z: 10
   
   # minimum distance a viewpoint needs to be from the centroid of a frontier to be considered
   # If higher than rmin, it will discard some bad viewpoints
@@ -40,7 +41,7 @@ frontier:
   
   # how far must a viewpoint candidate be from unknown space to be considered. Like a safety margin.
   # high values can sometimes mean that there is no vpt available and 'search fails'
-  min_candidate_clearance: 0.3
+  min_candidate_clearance: 0.21
 
   # Angle delta for viewpoint sampling
   # if you have very small narrow spaces, keep this lower, but doesnt affect too much tbh
@@ -52,16 +53,23 @@ frontier:
   candidate_rmin: 0.75 # [m]
   # max radius for viewpoint sampling around a frontier
   candidate_rmax: 1.75 # [m]
-  down_sample: 2
+  down_sample: 3
 
   # how many valid frontier voxels does a viewpoint need to see to be considered
   # lower values mean we have a lot of viewpoints even in small places
   # higher values means we are conservative about what a viewpoint sees
   # also depends a lot on your map resolution
-  min_visib_num: 10
+  min_visib_num: 20
   
   # % change that must happen for the frontier to call for recompute
   # Low values mean that we moved along very fast across the space, considering even a small changed to be enough to reevaluate
   # high values mean we are more strict. We make a lot of observations before moving. This is sluggish but makes the environment scene more stable
   # it should be tuned such that your observe smooth motions, without stops or fast acclerations
-  min_view_finish_fraction: 0.2
+  min_view_finish_fraction: 0.1
+
+
+optimization:
+  # The minimum distance the trajectory should maintain from obstacles
+  # in practice this should be higher than what you expect because of noise etc.
+  # But this distance is also valid from the ground (in z axis), so if the drone wants to see something close to the ground, it will find it hard to do and keep oscillating
+  dist0: 0.5 # [m]
