--- a/sw/metrics/package.xml
+++ b/sw/metrics/package.xml
@@ -52,6 +52,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <depend>plan_env</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
