--- a/sw/perception/attention_map/package.xml
+++ b/sw/perception/attention_map/package.xml
@@ -49,7 +49,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>common_msgs</build_depend>
+  <build_depend>stem_msgs</build_depend>
   <build_depend>plan_env</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
@@ -57,13 +57,13 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>sensor_model</build_depend>
   <build_depend>common</build_depend>
-  <build_export_depend>common_msgs</build_export_depend>
+  <build_export_depend>stem_msgs</build_export_depend>
   <build_export_depend>plan_env</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>traj_utils</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
-  <exec_depend>common_msgs</exec_depend>
+  <exec_depend>stem_msgs</exec_depend>
   <exec_depend>plan_env</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
