--- a/sw/simulation/gazebo_gt/package.xml
+++ b/sw/simulation/gazebo_gt/package.xml
@@ -50,7 +50,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
-  <depend>common_msgs</depend>
+  <depend>stem_msgs</depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   
