--- a/sw/stem_msgs/package.xml
+++ b/sw/stem_msgs/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>common_msgs</name>
+  <name>stem_msgs</name>
   <version>0.0.0</version>
-  <description>The common_msgs package</description>
+  <description>The stem_msgs package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="root@todo.todo">root</maintainer>
+  <maintainer email="niksethi@tudelft.nl">Nikhil Sethi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/common_msgs</url> -->
+  <!-- <url type="website">http://wiki.ros.org/stem_msgs</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
