--- a/sw/stem_control/package.xml
+++ b/sw/stem_control/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>control_interface</name>
+  <name>stem_control</name>
   <version>0.0.0</version>
-  <description>The control_interface package</description>
+  <description>The stem_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
