Fix and test build with new names

--- a/sw/stem_bringup/package.xml
+++ b/sw/stem_bringup/package.xml
@@ -22,7 +22,7 @@
 
   <!-- Stem Planning -->
   <exec_depend>plan_manage</exec_depend>
-  <exec_depend>target_search</exec_depend>
+  <exec_depend>stem_planner</exec_depend>
   <exec_depend>waypoint_generator</exec_depend>
 
   <!-- Control -->
