--- a/sw/stem_planner/package.xml
+++ b/sw/stem_planner/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>target_search</name>
+  <name>stem_planner</name>
   <version>0.0.0</version>
-  <description>The target_search package</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <description>The stem_planner package</description>
+  <maintainer email="niksethi@tudelft.nl">Nikhil Sethi</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>active_perception</depend>
+  <depend>stem_msgs</depend>
+  <depend>stem_utils</depend>
 </package>
